Prevent timer from flickering

--- a/resources/base.sass
+++ b/resources/base.sass
@@ -356,6 +356,7 @@ noscript #noscript
   position: fixed
   left: 20px
   top: 90%
+  display: none
 
   a
     height: 1.4em
